--- a/style.css
+++ b/style.css
@@ -96,6 +96,15 @@ color: #E0B612;
     border-radius: 15px;
     padding: 5px 20px;
 }
+
+#false-notify{
+    display: none;
+}
+
+#true-notify{
+    display: none;
+}
+
 .notify-section{
     width: 35%;
     margin: 0 auto;
